--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
 	<body>
 		<div class="container">
 			<div class="jumbotron">
-				<h1>Your Random Answer</h1>
-				<p id="randomanswer">Random Answer</p>
+				<h1 class="text-center">What is your question ?</h1>
+				<div class="row">
+					<div class="col-sm-10" id='formrow' style='padding: 50px'>
+						<form onsubmit="initapp()" action='#'>
+							<input type="text" class="form-control" placeholder="Your question here..."/>
+							<button type="submit" class="center-block btn btn-primary" style="margin-top: 10px; margin-bottom: 10px;">submit</button>
+						</form>
+					</div>
+				</div>
+			</div>
+			<div class="jumbotron hidden" id='answerdiv'>
+				<h1 id="randomanswer" class="text-center">Random Answer</h1>
 			</div>
 		</div>
 
@@ -30,10 +40,6 @@
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 		<script>
-			$( document ).ready(function() {
-				initapp();
-			})
-
 			var ans = [];
 			ans.push('Definitly!');
 			ans.push('Go for it.');
@@ -43,6 +49,7 @@
 			function initapp() {
 				ansernumber = Math.floor(Math.random()*ans.length  + 1);
 				$('#randomanswer').text(ans[ansernumber]);
+				$('#answerdiv').removeClass('hidden');
 			}
 		</script>
 	</body>
